## Process this file with Automake to create Makefile.in.

AUTOMAKE_OPTIONS = foreign

ICONS = w3c_home.gif \
	Lib48x.gif \
	LMB48x.gif \
	listen48x.gif \
	robot48x.gif \
	lines48x.gif \
	serv48x.gif \
	startup48x.gif \
	Bug48x.gif \
	Platform48x.gif \
	design48x.gif \
	doc48x.gif \
	guide48x.gif \
	internals48x.gif \
	install48x.gif \
	progstyle48x.gif \
	relnotes48x.gif \
	new_red.gif \
	bullet.gif

EXTRA_DIST = $(ICONS)
